# fs25_ad_editor

./: .blackboxrules  .gitignore  .markdownlint.json  .tmp_target.sh  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml
.cargo/: config.toml
.githooks/: pre-commit  (+1 more)
crates/fs25_auto_drive_engine/: API.md  Cargo.toml
crates/fs25_auto_drive_engine/src/: lib.rs
crates/fs25_auto_drive_engine/src/app/: API.md  controller.rs  history.rs  mod.rs  projections.rs  render_assets.rs  render_scene.rs  state.rs  tool_contract.rs  ui_contract.rs  viewport_overlay.rs
crates/fs25_auto_drive_engine/src/app/events/: command.rs  intent.rs
crates/fs25_auto_drive_engine/src/app/group_registry/: boundary_cache.rs  lock.rs  mod.rs  mutation.rs  query.rs  types.rs
crates/fs25_auto_drive_engine/src/app/handlers/: API.md  dialog.rs  editing.rs  file_io.rs  group.rs  helpers.rs  history.rs  mod.rs  route_tool.rs  selection.rs  view.rs
crates/fs25_auto_drive_engine/src/app/state/: app_state.rs  background_layers.rs  dialogs.rs  editor.rs  view.rs
crates/fs25_auto_drive_engine/src/app/tool_editing/: mod.rs  payload.rs
crates/fs25_auto_drive_engine/src/app/tools/: API.md  catalog.rs  manager.rs  mod.rs  route_tool.rs
crates/fs25_auto_drive_engine/src/app/ui_contract/: host_ui.rs  route_tool_panel.rs  viewport_overlay.rs
crates/fs25_auto_drive_engine/src/app/use_cases/: API.md  background_layers.rs  background_map.rs  file_io.rs  heightmap.rs  mod.rs  viewport.rs
crates/fs25_auto_drive_engine/src/core/: API.md  background_map.rs  centerline.rs  connection.rs  farmland.rs  meta.rs  mod.rs  road_map.rs  spatial.rs  thinning.rs
crates/fs25_auto_drive_engine/src/core/centerline/: extract.rs  search.rs  voronoi.rs
crates/fs25_auto_drive_engine/src/core/road_map/: dedup.rs  neighbors.rs  query.rs  tests.rs
crates/fs25_auto_drive_engine/src/shared/: API.md  background_layers.rs  dialog_state.rs  floating_menu.rs  geometry.rs  mod.rs  render_assets.rs  render_quality.rs  render_scene.rs  tool_group.rs
crates/fs25_auto_drive_engine/src/shared/i18n/: de.rs  en.rs  keys.rs  mod.rs
crates/fs25_auto_drive_engine/src/shared/options/: editor.rs  render.rs  tools.rs
crates/fs25_auto_drive_engine/src/xml/: API.md  curseplay.rs  mod.rs  parser.rs  writer.rs
crates/fs25_auto_drive_engine/src/xml/parser/: waypoints.rs
crates/fs25_auto_drive_frontend_egui/: API.md  Cargo.toml
crates/fs25_auto_drive_frontend_egui/src/: host_bridge_adapter.rs  lib.rs  runtime.rs
crates/fs25_auto_drive_frontend_egui/src/editor_app/: API.md  dialog_collector.rs  event_collection.rs  helpers.rs  mod.rs  overlays.rs  panel_collector.rs  processor.rs  viewport_collector.rs
crates/fs25_auto_drive_frontend_egui/src/render/: API.md  background_renderer.rs  callback.rs  fingerprint.rs  marker_renderer.rs  mod.rs  node_renderer.rs
crates/fs25_auto_drive_frontend_egui/src/render/connection_renderer/: mod.rs
crates/fs25_auto_drive_frontend_egui/src/ui/: API.md  command_palette.rs  common.rs  defaults_panel.rs  drag.rs  edit_panel.rs  floating_menu.rs  group_boundary_overlay.rs  group_overlay.rs  icons.rs  marker_panel.rs  menu.rs  mod.rs  properties.rs  status.rs  tool_preview.rs
crates/fs25_auto_drive_frontend_egui/src/ui/context_menu/: icons.rs  mod.rs  render.rs  tangent_ui.rs
crates/fs25_auto_drive_frontend_egui/src/ui/dialogs/: confirm_dissolve_dialog.rs  dedup_dialog.rs  dialog_widgets.rs  dialog_widgets_tests.rs  file_dialogs.rs  heightmap_warning.rs  marker_dialog.rs  mod.rs  overview_options_dialog.rs  post_load_dialog.rs  save_overview_dialog.rs  trace_all_fields_dialog.rs  zip_browser.rs
crates/fs25_auto_drive_frontend_egui/src/ui/edit_panel/: group_panel.rs  route_tool_panel.rs  streckenteilung_panel.rs
crates/fs25_auto_drive_frontend_egui/src/ui/input/: clicks.rs  drag_primary.rs  helpers.rs  mod.rs  pointer_delta.rs  state.rs  viewport_collect.rs  zoom.rs
crates/fs25_auto_drive_frontend_egui/src/ui/keyboard/: mod.rs  tests.rs
crates/fs25_auto_drive_host_bridge/: API.md  Cargo.toml
crates/fs25_auto_drive_host_bridge/src/: dispatch.rs  lib.rs
crates/fs25_auto_drive_host_bridge/src/dispatch/: actions.rs  mappings.rs  snapshot.rs  tests.rs  viewport_input.rs
crates/fs25_auto_drive_host_bridge/src/dto/: actions.rs  chrome.rs  connection_pair.rs  context_menu.rs  dialogs.rs  editing.rs  input.rs  markers.rs  mod.rs  node_details.rs  route_tool.rs  ui_json.rs  viewport.rs
crates/fs25_auto_drive_host_bridge/src/session/: chrome_state.rs  context_menu.rs  lifecycle.rs  mappings.rs  mod.rs  read_models.rs  session_chrome.rs  session_dispatch.rs  session_read_models.rs  session_snapshots.rs  snapshots.rs  tests.rs
crates/fs25_auto_drive_host_bridge_ffi/: API.md  Cargo.toml  build.rs
crates/fs25_auto_drive_host_bridge_ffi/include/: fs25ad_host_bridge.h
crates/fs25_auto_drive_host_bridge_ffi/src/: api.rs  canvas.rs  ffi_utils.rs  flutter_api.rs  flutter_gpu.rs  frb_generated.rs  helpers.rs  lib.rs  session_api.rs  session_handle.rs  shared_texture_v2.rs  tests.rs  texture_registration_v4.rs
crates/fs25_auto_drive_render_wgpu/: API.md  Cargo.toml
crates/fs25_auto_drive_render_wgpu/src/: background_renderer.rs  canvas.rs  export_core.rs  fingerprint.rs  lib.rs  marker_renderer.rs  node_renderer.rs  shaders.wgsl  shared_texture.rs  texture.rs  types.rs
crates/fs25_auto_drive_render_wgpu/src/connection_renderer/: culling.rs  mesh.rs  mod.rs
crates/fs25_auto_drive_render_wgpu/src/external_texture/: dx12_windows.rs  mod.rs  vulkan_android.rs  vulkan_linux.rs
crates/fs25_auto_drive_render_wgpu/src/texture_registration/: android.rs  linux.rs  mod.rs  types.rs  windows.rs
crates/fs25_map_overview/: API.md  Cargo.toml
crates/fs25_map_overview/src/: composite.rs  discovery.rs  farmland.rs  gdm.rs  grle.rs  hillshade.rs  layer_bundle.rs  lib.rs  palette.rs  road_mask.rs  terrain.rs  text.rs
crates/fs25_map_overview/src/composite/: legend.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_curseplay_parser.rs  fuzz_target_1.rs  fuzz_xml_parser.rs
(+578 files in other folders)
