[workspace]
members = [
    "fuzz",
    ".",
    "crates/fs25_auto_drive_engine",
    "crates/fs25_auto_drive_host_bridge",
    "crates/fs25_auto_drive_host_bridge_ffi",
    "crates/fs25_auto_drive_frontend_egui",
    "crates/fs25_auto_drive_render_wgpu",
    "crates/fs25_map_overview",
]

[package]
name = "FS25-AutoDrive-Editor"
version = "1.7.0"
edition = "2024"
authors = ["mro68"]
description = "GPU-beschleunigter Editor fuer AutoDrive-Kurse in Farming Simulator 25"
repository = "https://github.com/mro68/fs25_ad_editor"
license = "GPL-3.0"

[lib]
name = "fs25_auto_drive_editor"
path = "src/lib.rs"

[[bin]]
name = "FS25-AutoDrive-Editor"
path = "src/main.rs"

[[bench]]
name = "core_bench"
harness = false

[[bench]]
name = "render_hotpath_bench"
harness = false

[[bench]]
name = "tool_preview_hotpath_bench"
harness = false

[dependencies]
fs25_auto_drive_engine = { path = "crates/fs25_auto_drive_engine" }
fs25_auto_drive_frontend_egui = { path = "crates/fs25_auto_drive_frontend_egui" }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.8.2", features = ["html_reports"] }
glam = { version = "0.32.1", features = ["serde"] }
image = { version = "0.25", features = ["dds", "png", "jpeg"] }
