[package]
name = "fs25_auto_drive_frontend_egui"
version = "1.7.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
eframe = { version = "0.33.3", default-features = true, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wgpu",
] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
fs25_auto_drive_engine = { path = "../fs25_auto_drive_engine" }
glam = { version = "0.32.1", features = ["serde"] }
image = { version = "0.25", features = ["dds", "png", "jpeg"] }
indexmap = "2"
log = "0.4"
resvg = "0.47.0"
wgpu = "27.0.1"
