[package]
name = "fs25_auto_drive_host_bridge"
version = "1.7.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
fs25_auto_drive_engine = { path = "../fs25_auto_drive_engine" }
glam = { version = "0.32.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2.13.1"
