[package]
name = "fs25_auto_drive_render_wgpu"
version = "1.7.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
## Aktiviert Vulkan-HAL-Zugriff und plattformspezifischen DMA-BUF-Export für Flutter/Linux.
flutter-linux = ["dep:ash", "wgpu/vulkan"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
fs25_auto_drive_engine = { path = "../fs25_auto_drive_engine" }
glam = { version = "0.32.1", features = ["serde"] }
image = { version = "0.25", features = ["dds", "png", "jpeg"] }
indexmap = "2.13.1"
log = "0.4"
resvg = "0.47.0"
thiserror = "2"
wgpu = "29.0"

## Direkter Vulkan-Zugriff für DMA-BUF-Export — nur aktiv unter flutter-linux.
ash = { version = "0.38", optional = true }

[dev-dependencies]
pollster = "0.4"
