[package]
name = "fs25_auto_drive_render_wgpu"
version = "1.7.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[features]
## Aktiviert Vulkan-HAL-Zugriff und plattformspezifischen DMA-BUF-Export für Flutter/Linux.
flutter-linux = ["dep:ash", "wgpu/vulkan"]
## Aktiviert Vulkan-HAL-Zugriff und plattformspezifischen AHardwareBuffer-Export fuer Flutter/Android.
flutter-android = ["dep:ash", "dep:ndk", "dep:ndk-sys", "wgpu/vulkan"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
fs25_auto_drive_engine = { path = "../fs25_auto_drive_engine" }
glam = { version = "0.32.1", features = ["serde"] }
image = { version = "0.25", features = ["dds", "png", "jpeg"] }
indexmap = "2.13.1"
log = "0.4"
resvg = "0.47.0"
thiserror = "2"
wgpu = "29.0"

## Direkter Vulkan-Zugriff fuer plattformspezifischen Texture-Export — nur aktiv unter Flutter-Vulkan-Features.
ash = { version = "0.38", optional = true }
## Android-NDK-Bindings fuer AHardwareBuffer-Interop — nur aktiv unter flutter-android.
ndk = { version = "0.9", optional = true, features = ["api-level-26"] }
## Raw-FFI fuer AHardwareBuffer-Refcounting — nur aktiv unter flutter-android.
ndk-sys = { version = "0.6", optional = true }

[dev-dependencies]
pollster = "0.4"
